# Webex-Device-Assistant

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  ARCHITECTURE_NEW.md  Dockerfile  INSTALL.md  MANUAL.md  MANUAL_KO.md  README.md  ROOMOS_SCHEMA_PRODUCT_MAPPING.md  USER_MANUAL.md  USER_MANUAL_NEW.md  attachment-action-snapshot.md  delete-message-snapshot.md  edit-message-snapshot.md  edit-message-snapshot2.md  opencode_webex_device_prompt.md  pyproject.toml  pyrightconfig.json  roomos-network.txt
.deploy/: webex-device-assistant.env.example  webex-device-assistant.service
.github/: PR_BODY_phase1-4-hardening.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
admin_page/: api.py
admin_page/static/: admin.css  admin.js  architecture-guide.html  docs-ko.html  docs.html  index.html  webex-test.html  webex-test.js
assistant_app/: action_registry.py  admin_auth.py  admin_service.py  agentic_tool_runtime.py  approval_manager.py  config.py  logging_config.py  main.py  memory_store.py  metrics.py  mode_router.py  ollama_support.py  orchestrator.py  policy_evaluator.py  provider_registry.py  state_store.py  token_provider.py  tracing.py  webex_gateway.py  webex_messages.py  webex_webhooks.py  webhook_controller.py
assistant_app/orchestration/: card_builders.py  formatters.py  pending_state.py  text_extractors.py
assistant_app/providers/: __init__.py  base.py  ollama.py  ollama_normalizers.py  ollama_prompts.py  rule_based.py  rule_based_extractors.py
assistant_app/providers/rule_based_handlers/: audio.py  booking.py  camera.py  matrix.py  meeting.py  system.py  video.py
assistant_app/routes/: __init__.py  admin.py  debug.py  health.py  metrics.py  webhooks.py
device_executor/: device_client.py  executor.py  handlers.py
device_executor/device_client/: __init__.py  _base.py  audio.py  calling.py  camera.py  matrix.py  status.py  system.py  video.py
direct_tool_adapter/: adapter.py  tools.py
docs/: MIGRATION_ADMIN_COOKIE_SECRET.md  improvement-plan.md
shared/: policy_defaults.py
shared/contracts/: __init__.py  actions.py  admin.py  approval.py  audit.py  conversation.py  execution.py  inbound.py  policy.py  provider.py
tests/: _helpers.py  test_admin.py  test_agentic_tool_runtime.py  test_app.py  test_approval_flow.py  test_config_defaults.py  test_debug_orchestrator.py  test_follow_up.py  test_layout_intent_guard.py  test_manual_ko.py  test_metrics.py  test_persistence.py  test_policies.py  test_providers_ollama.py  test_providers_ollama_parsing.py  test_providers_rule_based.py  test_webex_cards.py  test_webex_integration.py
