[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webex-device-assistant-app"
version = "0.1.0"
description = "MVP Webex Device Assistant App with FastAPI orchestration and dual execution modes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<10.0",
  "ruff>=0.8,<1.0",
  "pyright>=1.1,<2.0",
]

[tool.setuptools.packages.find]
include = [
  "admin_page*",
  "assistant_app*",
  "device_executor*",
  "direct_tool_adapter*",
  "shared*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "B017", "SIM117"]
# FastAPI Depends() in default args is the documented pattern; B008 false-positive
"assistant_app/main.py" = ["B008"]
